# GuardAndTowers

./: .gitignore  Doku.md  Pybind_test.ipynb  README.md  benchmarking.cpp  board .cpp  board.cpp  board_api.h  board_tests.cpp  calculations.cpp  dlltest.py  dynoload.cpp  gat  main.cpp  pybind.cpp
Abgabe/: README.md  client.py  evaluation.py  guard_towers.py
CPP_Version/: CMakeLists.txt  alpha_beta.cpp  alpha_beta.hpp  benchmarking.cpp  board.cpp  board.h  board.hpp  board_tests.cpp  calc_alt.cpp  calculations.cpp  calculations.h  calculations.hpp  const.h  const.hpp  main.cpp  test_board.cpp  test_moving.cpp  types.hpp
GaT_python_optimized/: Benchmarks.ipynb  evaluation.py  guard_towers.py  test_guard_towers.py
GaT_python_simple/: Benchmarks.ipynb  GaT_gui.py  README.md  client.py  clientc.py  evaluation.py  gat.py  guard_towers.py  mcts.py  server.py  server_contest.py  test_guard_towers.py
include/: alpha_beta.hpp  board.hpp  calculations.hpp  const.hpp  extern.h  types.hpp
src/: alpha_beta.cpp  board.cpp  calculations.cpp  extern.cpp  main.cpp  pybind.cpp  shared.cpp
test/: benchmarking.cpp  test_moving.cpp
